Allow extensions to inject kamelets resources